; ModuleID = '/home/carl/AnghaBench/openssl/engines/extr_e_ossltest.c_digest_md5.c'
source_filename = "/home/carl/AnghaBench/openssl/engines/extr_e_ossltest.c_digest_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_hidden_md5_md = common dso_local global i32* null, align 8
@NID_md5 = common dso_local global i32 0, align 4
@NID_md5WithRSAEncryption = common dso_local global i32 0, align 4
@MD5_DIGEST_LENGTH = common dso_local global i32 0, align 4
@MD5_CBLOCK = common dso_local global i32 0, align 4
@digest_md5_init = common dso_local global i32 0, align 4
@digest_md5_update = common dso_local global i32 0, align 4
@digest_md5_final = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @digest_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @digest_md5() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32*, i32** @_hidden_md5_md, align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %47

4:                                                ; preds = %0
  %5 = load i32, i32* @NID_md5, align 4
  %6 = load i32, i32* @NID_md5WithRSAEncryption, align 4
  %7 = call i32* @EVP_MD_meth_new(i32 %5, i32 %6)
  store i32* %7, i32** %1, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %42, label %9

9:                                                ; preds = %4
  %10 = load i32*, i32** %1, align 8
  %11 = load i32, i32* @MD5_DIGEST_LENGTH, align 4
  %12 = call i32 @EVP_MD_meth_set_result_size(i32* %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %42

14:                                               ; preds = %9
  %15 = load i32*, i32** %1, align 8
  %16 = load i32, i32* @MD5_CBLOCK, align 4
  %17 = call i32 @EVP_MD_meth_set_input_blocksize(i32* %15, i32 %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %42

19:                                               ; preds = %14
  %20 = load i32*, i32** %1, align 8
  %21 = call i32 @EVP_MD_meth_set_app_datasize(i32* %20, i32 12)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %42

23:                                               ; preds = %19
  %24 = load i32*, i32** %1, align 8
  %25 = call i32 @EVP_MD_meth_set_flags(i32* %24, i32 0)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %42

27:                                               ; preds = %23
  %28 = load i32*, i32** %1, align 8
  %29 = load i32, i32* @digest_md5_init, align 4
  %30 = call i32 @EVP_MD_meth_set_init(i32* %28, i32 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %42

32:                                               ; preds = %27
  %33 = load i32*, i32** %1, align 8
  %34 = load i32, i32* @digest_md5_update, align 4
  %35 = call i32 @EVP_MD_meth_set_update(i32* %33, i32 %34)
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %32
  %38 = load i32*, i32** %1, align 8
  %39 = load i32, i32* @digest_md5_final, align 4
  %40 = call i32 @EVP_MD_meth_set_final(i32* %38, i32 %39)
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %45, label %42

42:                                               ; preds = %37, %32, %27, %23, %19, %14, %9, %4
  %43 = load i32*, i32** %1, align 8
  %44 = call i32 @EVP_MD_meth_free(i32* %43)
  store i32* null, i32** %1, align 8
  br label %45

45:                                               ; preds = %42, %37
  %46 = load i32*, i32** %1, align 8
  store i32* %46, i32** @_hidden_md5_md, align 8
  br label %47

47:                                               ; preds = %45, %0
  %48 = load i32*, i32** @_hidden_md5_md, align 8
  ret i32* %48
}

declare dso_local i32* @EVP_MD_meth_new(i32, i32) #1

declare dso_local i32 @EVP_MD_meth_set_result_size(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_set_input_blocksize(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_set_app_datasize(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_set_flags(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_set_init(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_set_update(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_set_final(i32*, i32) #1

declare dso_local i32 @EVP_MD_meth_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
